# exchange-shared

./: .env.example  .gitignore  Cargo.toml  ERC20_TOKEN_SUPPORT_DESIGN.md  ESTIMATE_ENDPOINT_DESIGN.md  ESTIMATE_OPTIMIZATION_SUMMARY.md  GAS_PRICE_API_REQUIREMENTS.md  GAS_PRICE_FETCHING_DESIGN.md  METRICS_IMPLEMENTATION_SUMMARY.md  MONITORING_METRICS_DESIGN.md  NON_EVM_CHAIN_IMPLEMENTATION.md  NON_EVM_IMPLEMENTATION_SUMMARY.md  PAIRS_ENDPOINT_DESIGN.md  PRICING_SERVICE_ANALYSIS.md  README.md  REAL_GAS_PRICE_IMPLEMENTATION.md  REFUND_FLOW_DESIGN.md  RPC_CONFIG_MANAGEMENT_DESIGN.md  SWAP_HISTORY_IMPLEMENTATION.md  TROCADOR_RPC_VERIFICATION.md  WALLET_FUNCTIONS.md  WEBHOOK_SYSTEM_DESIGN.md  architecture_analysis.md  doc.md  feauturesremain.md  note.md  rpc_config.example.json  run_swap_tests.sh  structure.md  test_alchemy.sh  test_analysis_and_improvements.md  test_trocador_and_rpc.sh  trocador_api_response.md  trocador_api_verification.md  trocador_btc.json  trocador_currencies_full.json  trocador_currencies_sample.json  trocador_exchanges.json  trocador_rate.json
.cargo/: config.toml
docs/: GAS_ESTIMATION_API.md
migrations/: 007_webhooks.sql  008_refunds.sql  009_tokens.sql  20231223_001_create_auth_tables.sql  20231224_create_swap_tables.sql  20260121000001_update_currencies_for_trocador.sql  20260121000002_update_providers_for_trocador.sql  20260208000001_add_wallet_tracking.sql  20260208000002_create_monitor_tables.sql  20260208000003_add_idempotency.sql  20260217000001_add_blockchain_listener_support.sql  20260218000001_add_swap_history_indexes.sql
src/: lib.rs  main.rs
src/config/: database.rs  environment.rs  mod.rs  rpc_config.rs
src/modules/: mod.rs
src/services/: hashing.rs  jwt.rs  mod.rs  rate_limit.rs  security.rs  trocador.rs
tests/: refund_tests.rs  rpc_alchemy_test.rs  swap_tests.rs  wallet_tests.rs  worker_tests.rs
tests/auth/: backup_codes_test.rs  email_verification_test.rs  forgot_password_test.rs  login_test.rs  logout_test.rs  me_test.rs  mod.rs  register_test.rs  reset_password_test.rs  two_factor_test.rs
tests/common/: mod.rs  rate_limiter.rs
tests/metrics/: collectors_test.rs  metrics_test.rs  mod.rs
tests/refund/: mod.rs  refund_calculator_test.rs
tests/rpc/: mod.rs  rpc_manager_test.rs
tests/swap/: algorithmic_pricing_test.rs  commission_test.rs  create_test.rs  currencies_test.rs  estimate_test.rs  history_test.rs  middleman_flow_test.rs  mod.rs  multi_chain_test.rs  pairs_test.rs  providers_test.rs  rates_test.rs  status_test.rs  validate_address_test.rs  wallet_validation_test.rs
tests/wallet/: address_generation_test.rs  address_reuse_test.rs  btc_signing_test.rs  evm_signing_test.rs  mod.rs  (+6 more)
(+82 files in other folders)
