[package]
name = "exchange-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
governor = "0.10.4"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "tls-native-tls", "migrate", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version = "0.6.8", features = ["cors", "limit", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
axum-test = "18.4.1"
tower = { version = "0.5.2", features = ["util"] }
uuid = { version = "1.19.0", features = ["v4"] }
