[package]
name = "exchange-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = "0.8.8"
bip39 = "2.1"
chrono = { version = "0.4.42", features = ["serde"] }
coins-bip32 = "0.8"
coins-bip39 = "0.8"
dotenvy = "0.15.7"
ed25519-dalek = "2.1"
governor = "0.10.4"
hex = "0.4"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rand = "0.9.2"
redis = { version = "1.0.2", features = ["tokio-comp"] }
reqwest = { version = "0.12.28", features = ["json"] }
ripemd = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
secp256k1 = { version = "0.29", features = ["recovery"] }
bs58 = "0.5"
sha2 = "0.10"
sha3 = "0.10"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio", "tls-native-tls", "migrate", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version = "0.6.8", features = ["cors", "limit", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
monero = "0.21.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
curve25519-dalek = "4.1.3"
statrs = "0.18.0"

[dev-dependencies]
axum-test = "18.4.1"
futures = "0.3"
tower = { version = "0.5.2", features = ["util"] }
uuid = { version = "1.19.0", features = ["v4"] }
